; ModuleID = '/home/carl/AnghaBench/vlc/modules/access/http/extr_h2conn.c_vlc_h2_initial_window_update.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/access/http/extr_h2conn.c_vlc_h2_initial_window_update.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vlc_h2_conn = type { %struct.vlc_h2_stream*, i32, i64 }
%struct.vlc_h2_stream = type { i32, %struct.vlc_h2_stream* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.vlc_h2_conn*, i64)* @vlc_h2_initial_window_update to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @vlc_h2_initial_window_update(%struct.vlc_h2_conn* %0, i64 %1) #0 {
  %3 = alloca %struct.vlc_h2_conn*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca %struct.vlc_h2_stream*, align 8
  store %struct.vlc_h2_conn* %0, %struct.vlc_h2_conn** %3, align 8
  store i64 %1, i64* %4, align 8
  %7 = load i64, i64* %4, align 8
  %8 = load %struct.vlc_h2_conn*, %struct.vlc_h2_conn** %3, align 8
  %9 = getelementptr inbounds %struct.vlc_h2_conn, %struct.vlc_h2_conn* %8, i32 0, i32 2
  %10 = load i64, i64* %9, align 8
  %11 = sub nsw i64 %7, %10
  store i64 %11, i64* %5, align 8
  %12 = load i64, i64* %4, align 8
  %13 = load %struct.vlc_h2_conn*, %struct.vlc_h2_conn** %3, align 8
  %14 = getelementptr inbounds %struct.vlc_h2_conn, %struct.vlc_h2_conn* %13, i32 0, i32 2
  store i64 %12, i64* %14, align 8
  %15 = load i64, i64* %5, align 8
  %16 = load %struct.vlc_h2_conn*, %struct.vlc_h2_conn** %3, align 8
  %17 = getelementptr inbounds %struct.vlc_h2_conn, %struct.vlc_h2_conn* %16, i32 0, i32 1
  %18 = load i32, i32* %17, align 8
  %19 = sext i32 %18 to i64
  %20 = add nsw i64 %19, %15
  %21 = trunc i64 %20 to i32
  store i32 %21, i32* %17, align 8
  %22 = load %struct.vlc_h2_conn*, %struct.vlc_h2_conn** %3, align 8
  %23 = getelementptr inbounds %struct.vlc_h2_conn, %struct.vlc_h2_conn* %22, i32 0, i32 0
  %24 = load %struct.vlc_h2_stream*, %struct.vlc_h2_stream** %23, align 8
  store %struct.vlc_h2_stream* %24, %struct.vlc_h2_stream** %6, align 8
  br label %25

25:                                               ; preds = %36, %2
  %26 = load %struct.vlc_h2_stream*, %struct.vlc_h2_stream** %6, align 8
  %27 = icmp ne %struct.vlc_h2_stream* %26, null
  br i1 %27, label %28, label %40

28:                                               ; preds = %25
  %29 = load i64, i64* %5, align 8
  %30 = load %struct.vlc_h2_stream*, %struct.vlc_h2_stream** %6, align 8
  %31 = getelementptr inbounds %struct.vlc_h2_stream, %struct.vlc_h2_stream* %30, i32 0, i32 0
  %32 = load i32, i32* %31, align 8
  %33 = sext i32 %32 to i64
  %34 = add nsw i64 %33, %29
  %35 = trunc i64 %34 to i32
  store i32 %35, i32* %31, align 8
  br label %36

36:                                               ; preds = %28
  %37 = load %struct.vlc_h2_stream*, %struct.vlc_h2_stream** %6, align 8
  %38 = getelementptr inbounds %struct.vlc_h2_stream, %struct.vlc_h2_stream* %37, i32 0, i32 1
  %39 = load %struct.vlc_h2_stream*, %struct.vlc_h2_stream** %38, align 8
  store %struct.vlc_h2_stream* %39, %struct.vlc_h2_stream** %6, align 8
  br label %25

40:                                               ; preds = %25
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
